testsuite/tests/properties/invalid_predicate_error/stray_dollar_trailing/test.lkt
from common import Example

@abstract
class FooNode implements Node[FooNode] {
    @predicate_error("msg: $n $")
    fun pred(@ignored n: Entity[Example]): Bool = false
}
